# comp

./: AGENTS.md  README.md  artifacts.py  ast_builder.py  ast_nodes.py  binder.py  calculation_pass.py  compiled_expr_eval.py  compiled_pipeline_runner.py  compiled_spec.py  emit_pass.py  esg_builtins.py  esgdl.lark  expr_eval.py  governance_pass.py  inference_pass.py  lex_eval.py  lex_ir.py  lex_pass.py  lowering.py  parse_pass.py  pipeline_runner.py  pyproject.toml  pytest.ini  repair_pass.py  rule_builtins.py  rule_eval.py  rule_ir.py  runtime_env.py  scope_resolution_pass.py  semantic_pass.py  source_eval.py  source_ir.py  spec_nodes.py
comp/: __init__.py  artifacts.py  compiled_pipeline_runner.py  pipeline_runner.py  runner.py  runtime_env.py
docs/: architecture.md  compatibility-policy.md  core-semantics.md  current-pipeline.md  emit-governance-boundary.md  esgdl-reference.md  execution-model.md  facade-inventory.md  facade-thinness.md  index.md  issue-plan.md  judgment-core.md  judgment-language.md  migration-checklist.md  migration-plan.md  spec-pipeline.md  testing.md  views-ledger.md  worked-example.md
tests/: conftest.py  test_artifact_contract.py  test_artifacts_package_location.py  test_ast_nodes_package_location.py  test_binder_rule_ir.py  test_compiled_expr_eval_package_location.py  test_compiled_runner.py  test_compiled_spec_package_location.py  test_e2e_contracts.py  test_esg_builtins_package_location.py  test_eval_module_facades.py  test_expr_eval_package_location.py  test_harness_contract.py  test_judgment_bridge.py  test_judgment_core.py  (+21 more)
(+57 files in other folders)
